# cppffi

./: Cargo.toml  example_class.h  example_class.hpp  expose.h
c_tests/: Makefile  main.cpp  test_vec2f.cpp
imath_install/include/Imath/: ImathConfig.h  ImathVec.h
src/: arguments.rs  c_expose.rs  class_info.rs  ffi_expose.rs  generator.rs  main.rs  result.rs  state.rs  supported_types.rs  utils.rs
