[package]
name = "cppffi"
version = "0.1.0"
authors = ["Luke Titley <luke@titley.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
rpath=false

[dependencies]
clang = {version="1.0.2", features=["clang_10_0"]}
handlebars = "3.5.1"
serde_json = "1.0.59"
serde = "1.0.117"
